# Kairos_team3

./: .gitignore
Assets/RosSharp/Scripts/Urdf/New Folder/: gripper.urdf  link4.dae  link5.dae  link6.dae  new_mycobot_pro_320_m5_2022_gripper.urdf
Assets/Scenes/: SampleScene.unity
Assets/URDF/myagv_urdf/urdf/: myagv_up.dae
Assets/URDF/mycobot_description/mycobot_320_m5_2022/: link1.dae  link2.dae  link3.dae  new_mycobot_pro_320_m5_2022.urdf  new_mycobot_pro_320_m5_2022_gripper.urdf
OpenCV기본/: 01.영상처리기본_이진화_연산_ROI.ipynb  08.에지검출.ipynb  10.컨투어.ipynb
Project1/Scripts/: listener.py  talker.py
Project1/test/: package.xml
Project_LGH/robot_test/: setup.py
Project_LGH/robot_test/scripts/: slave_node.py
UserSettings/: EditorUserSettings.asset
prject1_LGH/rrobot_test/scripts/: master_node.py
robot_test/: CMakeLists.txt  package.xml
robot_test/scripts/: master_node.py
robot_test/test/: test_example.py
