<?xml version="1.0"?>
<package format="2">
  <name>robot_test</name>
  <version>0.0.0</version>
  <description>The robot_test package</description>

  <!-- Maintainer details -->
  <maintainer email="kgkiros@todo.todo">kgkiros</maintainer>

  <!-- License details, need to specify actual license -->
  <license>TODO</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend> <!-- 추가된 의존성 -->

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend> <!-- 추가된 의존성 -->

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend> <!-- 추가된 의존성 -->

  <!-- Export tag -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>